--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,31 @@ body {
 	font-variant: normal;
 	text-transform: none;
 	color: #525252;
+	background: url(background.png);
+}
+.button
+{
+width: 143px;
+height: 30px;
+background-color: black;
+background-image: linear-gradient(to top, #0c0c0c 0%, #282828 100%);
+border: 1px solid #0e0e0e;
+box-shadow: 0.5px 0.9px 1px rgba(4, 4, 4, 0.3), inset 0.7px 0.8px 1px rgba(255, 255, 255, 0.43);
 }
 table.main {
+	margin-left: 210px;
+	width: 60%;
+	height: 100%;
+	border-collapse: collapse;
+	
+	/*table-layout: fixed;*/
+}
+table.main2 {
+	margin-left: 210px;
 	width: 100%;
 	height: 100%;
 	border-collapse: collapse;
-	background: url(background.png);
+	background: url(Orange copy.png);
 	/*table-layout: fixed;*/
 }
 .text1 {
@@ -53,7 +72,7 @@ a:hover {
   color: #f70211;
 }
 .button1 {
-background: #cc8400;
+background: #000000;
 border-style: hidden; /* Параметры рамки */
 border-radius: 30px;
 width: 145px; /* Ширина кнопки */
@@ -67,6 +86,16 @@ border-radius: 0px;
 width: 30px; /* Ширина кнопки */
 height: 35px; /* Высота */
 }
+.button3
+{
+/* Style for "Shape 1 copy 3" */
+width: 19px;
+height: 19px;
+border-radius: 30px;
+background-color: #e6e6e6;
+background-image: linear-gradient(to top, rgba(0, 0, 0, 0.14) 0%, rgba(255, 255, 255, 0.14) 100%);
+box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3), inset 0.5px 0.9px 0.7px 0.3px rgba(255, 255, 255, 0.73);
+}
 .text2 {
 color: #ffffff;
 font-family: Helvetica Bold;
@@ -77,6 +106,6 @@ font-weight: bold;
 line-height: 2;
 color: #ffffff;
 font-family: Georgia Regular;
-font-size: 12px;
+font-size: 13px;
 font-style: italic;
 }
